k8s-manifests/vcf-dumper-ws/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vcf-dumper-ws
  labels:
    app.kubernetes.io/name: vcf-dumper-ws
    app.kubernetes.io/component: api
