k8s-manifests/vcf-dumper-ws/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcf-dumper-ws
  labels:
    app: vcf-dumper-ws
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: management
    port: 9090
    targetPort: management
    protocol: TCP
  selector:
    app: vcf-dumper-ws
